RESOLVED FIXED 241903
[iOS 16] A couple of editing/selection/ios tests time out or fail
https://bugs.webkit.org/show_bug.cgi?id=241903
Summary [iOS 16] A couple of editing/selection/ios tests time out or fail
Wenson Hsieh
Reported 2022-06-22 22:18:25 PDT
Attachments
Wenson Hsieh
Comment 1 2022-06-22 22:42:20 PDT
EWS
Comment 2 2022-06-23 14:47:02 PDT
Committed 251803@main (152c735a0918): <https://commits.webkit.org/251803@main> Reviewed commits have been landed. Closing PR #1715 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.