[iOS 16] A couple of editing/selection/ios tests time out or fail https://bugs.webkit.org/show_bug.cgi?id=241903 rdar://92887847

Reviewed by Devin Rousso.

Address a couple of test failures on iOS 16.

* LayoutTests/editing/selection/ios/select-all-in-readonly-input-does-not-overflow.html:

Explicitly call `-becomeFirstResponder`, so that the text selection view actually shows up when
tapping a (programmatically set) text selection range in the readonly input.

This test only needs to verify that the selection rect is clipped to the input bounds, so we can
just fix the test so that the selection rect shows up.

* LayoutTests/editing/selection/ios/selection-after-changing-text-with-callout-menu-expected.txt: Removed.
* LayoutTests/editing/selection/ios/selection-after-changing-text-with-callout-menu.html: Removed.

Remove this layout test entirely. The ability to add callout bar items that don't dismiss when
tapped has been removed system-wide on iOS 16, so this test is no longer valuable.

* Tools/WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::installCustomMenuAction): Deleted.
(WTR::TestRunner::performCustomMenuAction): Deleted.
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::installCustomMenuAction): Deleted.
* Tools/WebKitTestRunner/TestController.h:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
(WTR::TestInvocation::performCustomMenuAction): Deleted.
* Tools/WebKitTestRunner/TestInvocation.h:
* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::installCustomMenuAction): Deleted.
* Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.h:
* Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView becomeFirstResponder]): Deleted.
(-[TestRunnerWKWebView _addCustomItemToMenuControllerIfNecessary]): Deleted.
(-[TestRunnerWKWebView installCustomMenuAction:dismissesAutomatically:callback:]): Deleted.
(-[TestRunnerWKWebView resetCustomMenuAction]): Deleted.
(-[TestRunnerWKWebView performCustomAction:]): Deleted.
(-[TestRunnerWKWebView canPerformAction:withSender:]): Deleted.
* Tools/WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformResetStateToConsistentValues):

Remove test support for installing custom menu actions using `UIMenuController`. This was only used
by the layout test "selection-after-changing-text-with-callout-menu.html", which is also now being
removed. Note that apps linked on or after iOS 16 will no longer be able to use `UIMenuController`
to add items.

Canonical link: https://commits.webkit.org/251803@main