Tools/WebKitTestRunner/TestController.cpp
@@ -3751,10 +3751,6 @@ bool TestController::keyExistsInKeychain(const String&, const String&)
     return false;
 }
 
-void TestController::installCustomMenuAction(const String&, bool)
-{
-}
-
 void TestController::setAllowedMenuActions(const Vector<String>&)
 {
 }
