Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.h
@@ -53,9 +53,7 @@
 
 - (void)setAllowedMenuActions:(NSArray<NSString *> *)actions;
 
-- (void)resetCustomMenuAction;
 - (void)immediatelyDismissContextMenuIfNeeded;
-- (void)installCustomMenuAction:(NSString *)name dismissesAutomatically:(BOOL)dismissesAutomatically callback:(dispatch_block_t)callback;
 
 - (void)_didPresentViewController:(UIViewController *)viewController;
 - (void)zoomToScale:(double)scale animated:(BOOL)animated completionHandler:(void (^)(void))completionHandler;
